# serializer version: 1
# name: test_render_annotations_complex
  '''
  # quartodoc.tests.example_signature.a_complex_signature { #quartodoc.tests.example_signature.a_complex_signature }
  
  `tests.example_signature.a_complex_signature(x: [list](`list`)\[[C](`quartodoc.tests.example_signature.C`) \| [int](`int`) \| None\])`
  
  ## Parameters
  
  | Name   | Type                                                                                 | Description     | Default    |
  |--------|--------------------------------------------------------------------------------------|-----------------|------------|
  | `x`    | [list](`list`)\[[C](`quartodoc.tests.example_signature.C`) \| [int](`int`) \| None\] | The x parameter | _required_ |
  '''
# ---
# name: test_render_doc_class[embedded]
  '''
  # quartodoc.tests.example_class.C { #quartodoc.tests.example_class.C }
  
  `tests.example_class.C(self, x, y)`
  
  The short summary.
  
  The extended summary,
  which may be multiple lines.
  
  ## Parameters
  
  | Name   | Type   | Description          | Default    |
  |--------|--------|----------------------|------------|
  | `x`    | str    | Uses signature type. | _required_ |
  | `y`    | int    | Uses manual type.    | _required_ |
  
  ## Attributes
  
  | Name | Description |
  | --- | --- |
  | [SOME_ATTRIBUTE](#quartodoc.tests.example_class.C.SOME_ATTRIBUTE) | An attribute |
  | [some_property](#quartodoc.tests.example_class.C.some_property) | A property |
  | [z](#quartodoc.tests.example_class.C.z) | A documented init attribute |
  
  ## Classes
  
  | Name | Description |
  | --- | --- |
  | [D](#quartodoc.tests.example_class.C.D) | A nested class |
  
  ### D { #quartodoc.tests.example_class.C.D }
  
  `tests.example_class.C.D()`
  
  A nested class
  
  ## Methods
  
  | Name | Description |
  | --- | --- |
  | [some_class_method](#quartodoc.tests.example_class.C.some_class_method) | A class method |
  | [some_method](#quartodoc.tests.example_class.C.some_method) | A method |
  
  ### some_class_method { #quartodoc.tests.example_class.C.some_class_method }
  
  `tests.example_class.C.some_class_method()`
  
  A class method
  
  ### some_method { #quartodoc.tests.example_class.C.some_method }
  
  `tests.example_class.C.some_method()`
  
  A method
  '''
# ---
# name: test_render_doc_class[flat]
  '''
  # quartodoc.tests.example_class.C { #quartodoc.tests.example_class.C }
  
  `tests.example_class.C(self, x, y)`
  
  The short summary.
  
  The extended summary,
  which may be multiple lines.
  
  ## Parameters
  
  | Name   | Type   | Description          | Default    |
  |--------|--------|----------------------|------------|
  | `x`    | str    | Uses signature type. | _required_ |
  | `y`    | int    | Uses manual type.    | _required_ |
  
  ## Attributes
  
  | Name | Description |
  | --- | --- |
  | [SOME_ATTRIBUTE](#quartodoc.tests.example_class.C.SOME_ATTRIBUTE) | An attribute |
  | [some_property](#quartodoc.tests.example_class.C.some_property) | A property |
  | [z](#quartodoc.tests.example_class.C.z) | A documented init attribute |
  
  ## Classes
  
  | Name | Description |
  | --- | --- |
  | [D](#quartodoc.tests.example_class.C.D) | A nested class |
  
  ## D { #quartodoc.tests.example_class.C.D }
  
  `tests.example_class.C.D()`
  
  A nested class
  
  ## Methods
  
  | Name | Description |
  | --- | --- |
  | [some_class_method](#quartodoc.tests.example_class.C.some_class_method) | A class method |
  | [some_method](#quartodoc.tests.example_class.C.some_method) | A method |
  
  ## some_class_method { #quartodoc.tests.example_class.C.some_class_method }
  
  `tests.example_class.C.some_class_method()`
  
  A class method
  
  ## some_method { #quartodoc.tests.example_class.C.some_method }
  
  `tests.example_class.C.some_method()`
  
  A method
  '''
# ---
# name: test_render_doc_class_attributes_section
  '''
  # quartodoc.tests.example_class.AttributesTable { #quartodoc.tests.example_class.AttributesTable }
  
  `tests.example_class.AttributesTable(self)`
  
  The short summary.
  
  ## Attributes
  
  | Name   | Type   | Description         |
  |--------|--------|---------------------|
  | x      | str    | Uses signature type |
  | y      | int    | Uses manual type    |
  | z      | float  | Defined in init     |
  '''
# ---
# name: test_render_doc_module[embedded]
  '''
  # quartodoc.tests.example { #quartodoc.tests.example }
  
  `tests.example`
  
  A module
  
  ## Attributes
  
  | Name | Description |
  | --- | --- |
  | [a_attr](#quartodoc.tests.example.a_attr) | An attribute |
  
  ## Classes
  
  | Name | Description |
  | --- | --- |
  | [AClass](#quartodoc.tests.example.AClass) | A class |
  
  ### AClass { #quartodoc.tests.example.AClass }
  
  `tests.example.AClass()`
  
  A class
  
  #### Attributes
  
  | Name | Description |
  | --- | --- |
  | [a_attr](#quartodoc.tests.example.AClass.a_attr) | A class attribute |
  
  #### Methods
  
  | Name | Description |
  | --- | --- |
  | [a_method](#quartodoc.tests.example.AClass.a_method) | A method |
  
  ##### a_method { #quartodoc.tests.example.AClass.a_method }
  
  `tests.example.AClass.a_method()`
  
  A method
  
  ## Functions
  
  | Name | Description |
  | --- | --- |
  | [a_func](#quartodoc.tests.example.a_func) | A function |
  
  ### a_func { #quartodoc.tests.example.a_func }
  
  `tests.example.a_func()`
  
  A function
  '''
# ---
# name: test_render_doc_module[flat]
  '''
  # quartodoc.tests.example { #quartodoc.tests.example }
  
  `tests.example`
  
  A module
  
  ## Attributes
  
  | Name | Description |
  | --- | --- |
  | [a_attr](#quartodoc.tests.example.a_attr) | An attribute |
  
  ## Classes
  
  | Name | Description |
  | --- | --- |
  | [AClass](#quartodoc.tests.example.AClass) | A class |
  
  ## AClass { #quartodoc.tests.example.AClass }
  
  `tests.example.AClass()`
  
  A class
  
  ### Attributes
  
  | Name | Description |
  | --- | --- |
  | [a_attr](#quartodoc.tests.example.AClass.a_attr) | A class attribute |
  
  ### Methods
  
  | Name | Description |
  | --- | --- |
  | [a_method](#quartodoc.tests.example.AClass.a_method) | A method |
  
  #### a_method { #quartodoc.tests.example.AClass.a_method }
  
  `tests.example.AClass.a_method()`
  
  A method
  
  ## Functions
  
  | Name | Description |
  | --- | --- |
  | [a_func](#quartodoc.tests.example.a_func) | A function |
  
  ## a_func { #quartodoc.tests.example.a_func }
  
  `tests.example.a_func()`
  
  A function
  '''
# ---
# name: test_render_doc_signature_name
  '''
  # example.a_func { #quartodoc.tests.example.a_func }
  
  `a_func()`
  
  A function
  '''
# ---
# name: test_render_doc_signature_name_alias_of_alias
  '''
  # example.a_nested_alias { #quartodoc.tests.example.a_nested_alias }
  
  `tests.example.a_nested_alias()`
  
  A nested alias target
  '''
# ---
# name: test_render_docstring_numpy_linebreaks
  '''
  # f_numpy_with_linebreaks { #quartodoc.tests.example_docstring_styles.f_numpy_with_linebreaks }
  
  `tests.example_docstring_styles.f_numpy_with_linebreaks(a, b)`
  
  A numpy style docstring.
  
  ## Parameters
  
  | Name   | Type   | Description      | Default    |
  |--------|--------|------------------|------------|
  | `a`    |        | The a parameter. | _required_ |
  | `b`    | str    | The b parameter. | _required_ |
  '''
# ---
# name: test_render_docstring_styles[google]
  '''
  # f_google { #quartodoc.tests.example_docstring_styles.f_google }
  
  `tests.example_docstring_styles.f_google(a, b)`
  
  A google style docstring.
  
  ## Parameters
  
  | Name   | Type   | Description      | Default    |
  |--------|--------|------------------|------------|
  | `a`    | int    | The a parameter. | _required_ |
  | `b`    | str    | The b parameter. | _required_ |
  '''
# ---
# name: test_render_docstring_styles[numpy]
  '''
  # f_numpy { #quartodoc.tests.example_docstring_styles.f_numpy }
  
  `tests.example_docstring_styles.f_numpy(a, b)`
  
  A numpy style docstring.
  
  ## Parameters
  
  | Name   | Type   | Description      | Default    |
  |--------|--------|------------------|------------|
  | `a`    |        | The a parameter. | _required_ |
  | `b`    | str    | The b parameter. | _required_ |
  '''
# ---
# name: test_render_docstring_styles[sphinx]
  '''
  # f_sphinx { #quartodoc.tests.example_docstring_styles.f_sphinx }
  
  `tests.example_docstring_styles.f_sphinx(a, b)`
  
  A sphinx style docstring.
  
  ## Parameters
  
  | Name   | Type   | Description      | Default    |
  |--------|--------|------------------|------------|
  | `a`    | int    | The a parameter. | _required_ |
  | `b`    | str    | The b parameter. | _required_ |
  '''
# ---
